fix table alignment glitch

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -142,17 +142,17 @@ select:focus[data-flux-control] {
 }
 
 /* Desktop view (default) */
-.responsive-table thead {
-    @apply bg-zinc-50 dark:bg-zinc-700;
-}
+/*.responsive-table thead {*/
+/*    @apply bg-zinc-50 dark:bg-zinc-700;*/
+/*}*/
 
-.responsive-table th {
-    @apply px-4 py-2 text-left text-xs font-medium text-zinc-500 dark:text-zinc-300 uppercase tracking-wider;
-}
+/*.responsive-table th {*/
+/*    @apply px-4 py-2 text-left text-xs font-medium text-zinc-500 dark:text-zinc-300 uppercase tracking-wider;*/
+/*}*/
 
-.responsive-table td {
-    @apply px-4 py-3 text-sm;
-}
+/*.responsive-table td {*/
+/*    @apply px-4 py-3 text-sm;*/
+/*}*/
 
 /* Mobile view */
 @media (max-width: 767px) {
